--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="services">
             <div class="box">
                 <img src="img/1.jpg" alt="">
-                <h2 class="h-secondary center">Food Catering</h2>
+                <h2 class="h-secondary center">Story Books</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et qui, repudiandae similique nam, recusandae quidem ab asperiores ex, aut fugit labore veritatis facere?
                     sint delectus ab dolorum nam. Debitis facere, incidunt voluptates eos, mollitia voluptatem iste sunt
@@ -44,7 +44,7 @@
             </div>
             <div class="box">
                 <img src="img/2.jpg" alt="">
-                <h2 class="h-secondary center">Bulk Ordering</h2>
+                <h2 class="h-secondary center">Autobiography Books</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium a incidunt animi ad, ab dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
 
@@ -53,7 +53,7 @@
             </div>
             <div class="box">
                 <img src="img/3.jpg" alt="">
-                <h2 class="h-secondary center">Food Ordering</h2>
+                <h2 class="h-secondary center">Motivational Books</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus provident fugiat aliquam minima at explicabo. Earum eveniet quaerat, sunt molestias nesciunt quas! Quis.
                     sint delectus ab dolorum nam. Debitis facere, incidunt voluptates eos, mollitia voluptatem iste sunt
